# dlw-2026

./: .gitignore  CLAUDE.md  README.md  adaptive_pomodoro.py  bridge.py  cursor_tracker.js  demo_integration.py  demo_learning_model.py  demo_scheduler.py  engine_state.py  insights.py  kinesthetics.py  lecture.py  main.py  pyproject.toml  requirements.txt  study_mode.db
backend/: database.py  llm.py  main.py  models.py  pdf_utils.py  run_seed.py  scraper.py  seed.py
backend/routers/: analytics.py  audio.py  chat.py  concepts.py  course.py  integration.py  notebook.py  quiz.py  recall.py  tutorial.py
bridge_data/: curriculum_meta.csv  exam_weights.csv  quiz_results.csv  session_events.csv  topic_mastery.csv
data/: sample_curriculum.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/components/: AudioPlayer.tsx  ChatPanel.tsx  ComparisonTable.tsx  ConceptBox.tsx  ConceptMap.tsx  DyslexiaToggle.tsx  FlowDiagram.tsx  QuizPanel.tsx  RecallModal.tsx  SemanticBlocks.tsx  TopNav.tsx  TutorialFlow.tsx  WorkedExamples.tsx
frontend/hooks/: useActiveRecall.ts
frontend/lib/: api.ts  audioCache.ts  calendarMock.ts  markdown.ts
ntulearn_clone/: app.js  index.html  package-lock.json  package.json  playwright-script.js  study.html  styles.css  vark_integration.js  widget.js
sample_data/: article_url.txt
src/learning_model/: __init__.py  bkt.py  forgetting.py  knowledge_graph.py  mastery_engine.py  models.py
src/scheduler/: __init__.py  cognitive_load.py  models.py  timetable.py
(+18 files in other folders)
