[project]
name = "dlw-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.0",
    "greenlet>=3.3.2",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]
